fix: attachPlayersToAClub